# paperlists-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  railway.json
.github/workflows/: ci.yml
docs/: PR29_SOURCE_MESSAGE.md
mcp-server/: README.md  pyproject.toml
mcp-server/paperlists_mcp/: __init__.py  server.py
query-api/: .gitignore  README.md  pyproject.toml
query-api/paperlists_api/: __init__.py  db.py  indexer.py  keyword_noise.py  main.py  match_modes.py  queries.py  ratelimit.py
query-api/tests/: test_corpus_manifest.py  test_fixes_from_codex_review.py  test_indexer.py  test_query_filters.py
skill/: paperlists.md
skill/scripts/: paperlists.py
