[project]
name = "paperlists-mcp"
version = "0.1.0"
description = "MCP server exposing the papercopilot/paperlists corpus to AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.scripts]
paperlists-mcp = "paperlists_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["paperlists_mcp*"]
