[project]
name = "paperlists-api"
version = "0.2.0"
description = "Hosted query API over the papercopilot/paperlists corpus."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["paperlists_api*"]
